# ros2_cam_nbdev

./: .gitignore  AGENTS.md  README.md  prepare_project.bash  pyproject.toml  system_constraints.txt
.github/: copilot-instructions.md
.github/agents/: nbdev-expert.md
nbs/: 00_project_setup.ipynb  01_simple_example.ipynb  02_standard_publisher.ipynb  03_parameters_and_services.ipynb  04_lifecycle_node.ipynb  05_image_transport.ipynb  06_calibration_and_info.ipynb  07_simulation.ipynb  08_visualization.ipynb  10_existing_drivers.ipynb  11_annex.ipynb  index.ipynb  nbdev.yml
ros2_cam_nbdev/: _modidx.py
scripts/: compile_pkg.sh  mk_ros2_pkg.sh  prepare_project.bash
scripts/config_files/: default_config.yaml
